update contact us

--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
                 <div id="in_form">
                     <div id="first_half_form">
                         <label for="email_form">Your Email:</label>
-                        <input id="email_form" class="mail_and_phone borderer" placeholder="ex: yellowgreen@yellowgreen.com">
+                        <input id="email_form" class="mail_and_phone borderer" placeholder="yellowgreen@yellowgreen.com">
                         <label for="phone_form">Your phone:</label>
-                        <input id="phone_form" class="mail_and_phone borderer" placeholder="ex: 03 12 34 56 78">
+                        <input id="phone_form" class="mail_and_phone borderer" placeholder="03 12 34 56 78">
                         <label>Choose a topic:</label>
                         <select class="borderer" id="category_form">
                             <option value="quote">I need a quote:</option>
