change our values style and clean media queries section

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <nav>
         <ul class="ulheader">
             <li class="liheader"><a href="#what-we-do">What we do</a></li>
-            <li class="liheader"><a href="#some-projects">Our Project</a></li>
             <li class="liheader"><a href="#our-values">Our Values</a></li>
+            <li class="liheader"><a href="#some-projects">Our Projects</a></li>
             <li class="liheader"><a href="#formulaire">Contact us</a></li>
             <li class="liheader"><a href="#about-us">About us</a>
             <li class="liheader"><a href="#meet-our-team">Meet our team</a>
@@ -61,11 +61,11 @@
 
         <hr>
 
-        <!--SECTION SLIDESHOW OUR VALUES /// MARGAUX-->
+        <!--SECTION OUR VALUES /// MARGAUX-->
         <section id="our-values">
             <h2>Our Values</h2>
-            <div class="slideshow-container">
-                <article>
+            <div class="values-container">
+                <article class="right">
                     <div class="image-container">
                         <img src="Images/slideshow1.jpg" alt="Leaves">
                     </div>
@@ -77,7 +77,7 @@
                     </div>
                 </article>
 
-                <article>
+                <article class="left">
                     <div class="image-container">
                         <img src="Images/slideshow2.jpg" alt="Trees">
                     </div>
@@ -89,7 +89,7 @@
                     </div>
                 </article>
 
-                <article>
+                <article class="right">
                     <div class="image-container">
                         <img src="Images/slideshow3.jpg" alt="Hands">
                     </div>
