update picture of values 1

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="values-container">
                 <article class="right">
                     <div class="image-container">
-                        <img src="Images/slideshow1.jpg" alt="Leaves">
+                        <img src="Images/values1.jpg" alt="Leaves">
                     </div>
                     <div class="text-container">
                         <h3>Eco-design</h3>
