prep done for script.js, minor text changes in index.html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <article>
                         <h3 class="wwd-title">Web</h3>
                         <img class="wwd-img" src="Images/coding.png" alt="a desktop with a plant">
-                        <p>A multidisciplinary and committed team to offer you that little extra that makes the difference. Thanks to the integration of all the components of creation, the communications agency La Confection has every legitimacy to become your most precious support.</p>
+                        <p>A multidisciplinary and committed team to offer you that little extra that makes the difference. Thanks to the integration of all the components of creation, the communications agency "La Confection" has all legitimacy to become your most precious support.</p>
                     </article>
                 </li>
 
@@ -84,7 +84,7 @@
                     <div class="text-container">
                         <h3>Commitment</h3>
                         <p>
-                            At Yellowgreen we are committed to working with partners who share the same values. This is why all our partners use water-based inks and recycled paper.
+                            At Yellowgreen, we are committed to work with partners who share the same values. This is why all our partners use water-based inks and recycled paper.
                         </p>
                     </div>
                 </article>
