some modifications in customers testimonial

--- a/index.html
+++ b/index.html
@@ -169,26 +169,26 @@
             <div class="container-testimonial">
                 <div class="testimonial">
                     <svg class="testimonial__icon icon" aria-hidden="true" width="64" height="64" viewBox="0 0 64 64"><polygon points="2 36 17 2 26 2 15 36 26 36 26 62 2 62 2 36"/><polygon points="38 36 53 2 62 2 51 36 62 36 62 62 38 62 38 36"/></svg>
-                    <blockquote class="testimonial__quote"><mark>Lorem ipsum dolor sit amet consectetur adipisicing elit</mark>. Eligendi atque doloremque beatae! Doloremque perspiciatis aliquid repellat quasi praesentium, minima nobis assumenda ex?</blockquote>
+                    <blockquote class="testimonial__quote">They have produced <mark>a very efficient, professional and effective piece of work.</mark>. I recommand them !</blockquote>
                     <footer class="testimonial__footer">
-                         <cite class="testimonial__cite"><strong>Emily Ewing</strong> <span>Designer at CompanyX</span></cite>
+                         <cite class="testimonial__cite"><strong>Dumbo</strong> <span>Designer at Wild Circus Company</span></cite>
                     </footer>
                 </div>
 
             
                 <div class="testimonial">
                     <svg class="testimonial__icon icon" aria-hidden="true" width="64" height="64" viewBox="0 0 64 64"><polygon points="2 36 17 2 26 2 15 36 26 36 26 62 2 62 2 36"/><polygon points="38 36 53 2 62 2 51 36 62 36 62 62 38 62 38 36"/></svg>
-                    <blockquote class="testimonial__quote"><mark>Lorem ipsum dolor sit amet</mark>, consectetur adipisicing elit. Consectetur, recusandae? Saepe, facere.</blockquote>
+                    <blockquote class="testimonial__quote"><mark>This team is amazing !</mark> Very helpful to behave better in sustainable development. </blockquote>
                     <footer class="testimonial__footer">
-                        <cite class="testimonial__cite"><strong>James Powell</strong> <span>Developer at CompanyY</span></cite>
+                        <cite class="testimonial__cite"><strong>Homer Simpson</strong> <span>Developer at Sprinfield Enterprise</span></cite>
                     </footer>
                 </div>
               
                 <div class="testimonial">
                     <svg class="testimonial__icon icon" aria-hidden="true" width="64" height="64" viewBox="0 0 64 64"><polygon points="2 36 17 2 26 2 15 36 26 36 26 62 2 62 2 36"/><polygon points="38 36 53 2 62 2 51 36 62 36 62 62 38 62 38 36"/></svg>
-                    <blockquote class="testimonial__quote">Lorem ipsum dolor sit amet consectetur adipisicing elit. <mark>Suscipit provident numquam velit officiis impedit</mark>, molestiae adipisci architecto dolore expedita esse minima ut asperiores explicabo, aut iure exercitationem quam.</blockquote>
+                    <blockquote class="testimonial__quote">They are working <mark>in a balanced, progressive and proactive way with a view</mark>, to solving the problems</blockquote>
                     <footer class="testimonial__footer">
-                        <cite class="testimonial__cite"><strong>Olivia Gribben</strong> <span>CEO at CompanyZ</span></cite>
+                        <cite class="testimonial__cite"><strong>Sauron</strong> <span>CEO at Mordor's Corporation</span></cite>
                     </footer>
                 </div>
             </div>
