just some tests for Js and button on testimonials

--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
         <section id="they-trust-us">
             <h2>They trust us</h2>
             <div class="container-testimonial">
+                <button id="left-btn"><i class="arrow"></i></button>
                 <div class="testimonial">
                     <svg class="testimonial__icon icon" aria-hidden="true" width="64" height="64" viewBox="0 0 64 64"><polygon points="2 36 17 2 26 2 15 36 26 36 26 62 2 62 2 36"/><polygon points="38 36 53 2 62 2 51 36 62 36 62 62 38 62 38 36"/></svg>
                     <blockquote class="testimonial__quote">They have produced <mark>a very efficient, professional and effective piece of work.</mark>. I recommand them !</blockquote>
@@ -174,6 +175,7 @@
                          <cite class="testimonial__cite"><strong>Dumbo</strong> <span>Designer at Wild Circus Company</span></cite>
                     </footer>
                 </div>
+                <button id="right-btn"><i class="arrow"></i></button>
 
             
                 <div class="testimonial">
