editing some changes in script.js et index.js

--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
     <link href="https://fonts.googleapis.com/css?family=Oswald|Pacifico&display=swap" rel="stylesheet">
     <title>YellowGreen</title>
 </head>
-
-<script type="text/javascript" src="script.js"></script>
-
 <body>
     <header>
             <h1 class="titreh1"><span class="spanY">Y</span>ellowGreen</h1>     
@@ -245,9 +242,9 @@
             <ul> 
                 <li>
                     <ul>
-                        <li><a href="#about-us">About us</a></li>
+                        <li><a href="#" id="aboutUs">About us</a></li>
                         <li><a href="#">Advertise</a></li>
-                        <li><a href="#formulaire">Contact</a></li>
+                        <li><a href="#">Contact</a></li>
                     </ul>
                 <li>
                     <ul>
@@ -264,5 +261,6 @@
             </ul>
         </div>  
     </footer>
+<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
