Adding the cookies section

--- a/index.html
+++ b/index.html
@@ -285,7 +285,15 @@
                 </li>
             </ul>
         </div>  
-    </footer>
+</footer>
+
+  <div id="cookies">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+      Tempore explicabo mollitia delectus necessitatibus fuga quibusdam laboriosam dolor asperiores consequatur 
+      voluptates tenetur in sunt saepe nisi, consectetur unde, illo vero maiores.
+      </p>
+  </div>
+
 <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
