--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
                 <article class="left">
                     <div class="image-container">
-                        <img src="Images/slideshow2.jpg" alt="Trees">
+                        <img src="Images/values2.jpg" alt="Trees">
                     </div>
                     <div class="text-container">
                         <h3>Commitment</h3>
@@ -91,7 +91,7 @@
 
                 <article class="right">
                     <div class="image-container">
-                        <img src="Images/slideshow3.jpg" alt="Hands">
+                        <img src="Images/values3.jpg" alt="Hands">
                     </div>
                     <div class="text-container">
                         <h3>Co-design</h3>
@@ -125,7 +125,7 @@
                     <a href="https://codepen.io/magb7/pen/YzPbNEe?editors=1100" target="_blank"><img src="Images/WildCircus5.jpg" alt="Picture of one of our project"></a>
                 </article>
                 <article>
-                   <a href="https://codepen.io/Pikss/pen/WWEgez"><img src="Images/WildCircus6.jpg" alt="Picture of one of our project"></a>
+                   <a href="https://codepen.io/Pikss/pen/WWEgez" target="_blank"><img src="Images/WildCircus6.jpg" alt="Picture of one of our project"></a>
                 </article>
             </div>
         </section>
