adding slideshow to project section

--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
     <title>YellowGreen</title>
 </head>
 
-<script type="text/javascript" src="script.js"></script>
-
 <body>
     <header>
             <h1 class="titreh1"><span class="spanY">Y</span>ellowGreen</h1>     
@@ -108,26 +106,40 @@
          <!-- SOME PROJECTS -->
          <section id="some-projects">
             <h2>Some Projects</h2>
-            <div class="projects-container">
-                <article>
-                    <a href="https://codepen.io/Temporare/pen/vYYNyMM" target="_blank"><img src="Images/WildCircus1.jpg" alt="Picture of one of our project"></a>
-                </article>
-                <article>
-                    <a href="https://codepen.io/liolo/pen/orMxzG" target="_blank"><img src="Images/WildCircus2.jpg" alt="Picture of one of our project"></a>
-                </article>
-                <article>
-                    <a href="https://github.com/YannYves/Wild-Circus-template" target="_blank"><img src="Images/WildCircus3.jpg" alt="Picture of one of our project"></a>
-                </article>
-                <article>
-                    <a href="https://codepen.io/ValentinV3/pen/KKweBKJ" target="_blank"><img src="Images/WildCircus4.jpg" alt="Picture of one of our project"></a>
-                </article>
-                <article>
-                    <a href="https://codepen.io/magb7/pen/YzPbNEe?editors=1100" target="_blank"><img src="Images/WildCircus5.jpg" alt="Picture of one of our project"></a>
-                </article>
-                <article>
-                   <a href="https://codepen.io/Pikss/pen/WWEgez" target="_blank"><img src="Images/WildCircus6.jpg" alt="Picture of one of our project"></a>
-                </article>
+            <div class="carousel-container">
+                <a id="prevBtn">&#10094;</a>
+                <a id="nextBtn">&#10095;</a>
+                <div class="carousel-slide">
+                    <img src="Images/WildCircus6.jpg" id="lastClone" alt="Picture of one of our project">
+                    <img src="Images/WildCircus1.jpg" alt="Picture of one of our project">
+                    <img src="Images/WildCircus2.jpg" alt="Picture of one of our project">
+                    <img src="Images/WildCircus3.jpg" alt="Picture of one of our project">
+                    <img src="Images/WildCircus4.jpg" alt="Picture of one of our project">
+                    <img src="Images/WildCircus5.jpg" alt="Picture of one of our project">
+                    <img src="Images/WildCircus6.jpg" alt="Picture of one of our project">
+                    <img src="Images/WildCircus1.jpg" id="firstClone" alt="Picture of one of our project">
+                </div>
             </div>
+            
+            <article>
+                <a href="https://codepen.io/Temporare/pen/vYYNyMM" target="_blank"></a>
+            </article>
+            <article>
+                <a href="https://codepen.io/liolo/pen/orMxzG" target="_blank"></a>
+            </article>
+            <article>
+                <a href="https://github.com/YannYves/Wild-Circus-template" target="_blank"></a>
+            </article>
+            <article>
+                <a href="https://codepen.io/ValentinV3/pen/KKweBKJ" target="_blank"></a>
+            </article>
+            <article>
+                <a href="https://codepen.io/magb7/pen/YzPbNEe?editors=1100" target="_blank"></a>
+            </article>
+            <article>
+               <a href="https://codepen.io/Pikss/pen/WWEgez" target="_blank"></a>
+            </article>
+        
         </section>
 
         <!--Form RoxaneDrelon--> 
@@ -289,5 +301,8 @@
             </ul>
         </div>  
     </footer>
+
+    <script type="text/javascript" src="script.js"></script>
+
 </body>
 </html>
