--- a/index.html
+++ b/index.html
@@ -204,54 +204,61 @@
                     </div>
                 </div>
                 <div class="avatarteam">
-                    
+                
+                <a href="https://www.linkedin.com/in/liora-loche-3bb2a0a9/" target="_blank">
                     <div class="team">
                         <img src="Images/liora.png" alt="Liora">
-                        <p>
+                        <div class="meetLinkedin">
                             <img src="Images/linkedin.png" alt="linkedin">
-                            <a href="https://www.linkedin.com/in/liora-loche-3bb2a0a9/" target="_blank">Liora
-                            </a>
-                        </p>
+                            <p> Liora</p>
+                        </div>
                     </div>
+                </a>
+                <a href="https://www.linkedin.com/in/margaux-bédu/" target="_blank">
                     <div class="team">
                         <img src="Images/margaux.png" alt="Margaux">
-                        <p>
+                        <div class="meetLinkedin">
                             <img src="Images/linkedin.png" alt="linkedin">
-                            <a href="https://www.linkedin.com/in/margaux-bédu/" target="_blank">Margaux
-                            </a>
-                        </p>
+                            <p>Margaux</p>
+                        </div>
                     </div>
+                </a>
+                <a href="https://www.linkedin.com/in/maxime-rawinski-2858218b/" target="_blank">
                     <div class="team">
                         <img src="Images/maxime.png" alt="Maxime">
-                        <p><img src="Images/linkedin.png" alt="linkedin">
-                            <a href="https://www.linkedin.com/in/maxime-rawinski-2858218b/" target="_blank">Maxime
-                            </a>
-                        </p>
+                        <div class="meetLinkedin">
+                            <img src="Images/linkedin.png" alt="linkedin">
+                            <p>Maxime</p>
+                        </div>
                     </div>
+                </a>
+                <a href="https://www.linkedin.com/in/roxane-drelon-956371162/" target="_blank">
                     <div class="team">
                         <img src="Images/roxane.png" alt="Roxane">
-                        <p>
+                        <div class="meetLinkedin">
                             <img src="Images/linkedin.png" alt="linkedin">
-                            <a href="https://www.linkedin.com/in/roxane-drelon-956371162/" target="_blank">Roxane
-                            </a>
-                        </p>
+                            <p>Roxane</p>
+                        </div>
                     </div>
+                </a>
+                <a href="https://www.linkedin.com/in/valentin-vantroys-6a214463/" target="_blank">
                     <div class="team">
                         <img src="Images/valentin.png" alt="Valentin">
-                        <p>
+                        <div class="meetLinkedin">
                             <img src="Images/linkedin.png" alt="linkedin">
-                            <a href="https://www.linkedin.com/in/valentin-vantroys-6a214463/" target="_blank">Valentin
-                            </a>
-                        </p>
+                            <p>Valentin</p>
+                        </div>
                     </div>
+                </a>
+                <a href="https://www.linkedin.com/in/yann-dubois-88665992/" target="_blank">
                     <div class="team">
                         <img src="Images/yann.png" alt="Yann">
-                        <p>
+                        <div class="meetLinkedin">
                             <img src="Images/linkedin.png" alt="linkedin">
-                            <a href="https://www.linkedin.com/in/yann-dubois-88665992/" target="_blank">Yann
-                            </a>
-                        </p>
+                            <p>Yann</p>
+                        </div>
                     </div>
+                </a>
                 </div>
             </section>
         </main>
