--- a/index.html
+++ b/index.html
@@ -15,9 +15,17 @@
 
 <body>
     <header>
-            <h1 class="titreh1"><span class="spanY">Y</span>ellowGreen</h1>     
+            <h1 class="titreh1"><span class="spanY">Y</span>ellowGreen</h1>
+            <p class="agence">Agence de communication responsable</p>
     </header>
+    <div class="container">
     <nav>
+        <div class="burger">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+            <div class="line4"></div>
+        </div>
         <ul class="ulheader">
             <li class="liheader"><a href="#what-we-do">What we do</a></li>
             <li class="liheader"><a href="#our-values">Our Values</a></li>
@@ -27,6 +35,7 @@
             <li class="liheader"><a href="#meet-our-team">Meet our team</a></li>
         </ul>
     </nav>
+    </div>
 
     <main>
         <!--SECTION WHAT WE DO /// VALENTIN-->
