Meet our team: fixed links, now fit the circle around team members

--- a/index.html
+++ b/index.html
@@ -224,58 +224,47 @@
                 </div>
                 <div class="avatarteam">
                 
-                <a href="https://www.linkedin.com/in/liora-loche-3bb2a0a9/" target="_blank">
-                    <div class="team">
-                        <img src="Images/liora.png" alt="Liora">
-                        <div class="meetLinkedin">
-                            <img src="Images/linkedin.png" alt="linkedin">
-                            <p> Liora</p>
-                        </div>
+                   
+                <a href="https://www.linkedin.com/in/liora-loche-3bb2a0a9/" target="_blank" class="team">
+                    <img src="Images/liora.png" alt="Liora">
+                    <div class="meetLinkedin">
+                        <img src="Images/linkedin.png" alt="linkedin">
+                        <p> Liora</p>
                     </div>
                 </a>
-                <a href="https://www.linkedin.com/in/margaux-bédu/" target="_blank">
-                    <div class="team">
-                        <img src="Images/margaux.png" alt="Margaux">
-                        <div class="meetLinkedin">
-                            <img src="Images/linkedin.png" alt="linkedin">
-                            <p>Margaux</p>
-                        </div>
+                <a href="https://www.linkedin.com/in/margaux-bédu/" target="_blank" class="team">
+                    <img src="Images/margaux.png" alt="Margaux">
+                    <div class="meetLinkedin">
+                        <img src="Images/linkedin.png" alt="linkedin">
+                        <p>Margaux</p>
                     </div>
                 </a>
-                <a href="https://www.linkedin.com/in/maxime-rawinski-2858218b/" target="_blank">
-                    <div class="team">
-                        <img src="Images/maxime.png" alt="Maxime">
-                        <div class="meetLinkedin">
-                            <img src="Images/linkedin.png" alt="linkedin">
-                            <p>Maxime</p>
-                        </div>
+                <a href="https://www.linkedin.com/in/maxime-rawinski-2858218b/" target="_blank" class="team">
+                    <img src="Images/maxime.png" alt="Maxime">
+                    <div class="meetLinkedin">
+                        <img src="Images/linkedin.png" alt="linkedin">
+                        <p>Maxime</p>
                     </div>
                 </a>
-                <a href="https://www.linkedin.com/in/roxane-drelon-956371162/" target="_blank">
-                    <div class="team">
-                        <img src="Images/roxane.png" alt="Roxane">
-                        <div class="meetLinkedin">
-                            <img src="Images/linkedin.png" alt="linkedin">
-                            <p>Roxane</p>
-                        </div>
+                <a href="https://www.linkedin.com/in/roxane-drelon-956371162/" target="_blank" class="team">
+                    <img src="Images/roxane.png" alt="Roxane">
+                    <div class="meetLinkedin">
+                        <img src="Images/linkedin.png" alt="linkedin">
+                        <p>Roxane</p>
                     </div>
                 </a>
-                <a href="https://www.linkedin.com/in/valentin-vantroys-6a214463/" target="_blank">
-                    <div class="team">
-                        <img src="Images/valentin.png" alt="Valentin">
-                        <div class="meetLinkedin">
-                            <img src="Images/linkedin.png" alt="linkedin">
-                            <p>Valentin</p>
-                        </div>
+                <a href="https://www.linkedin.com/in/valentin-vantroys-6a214463/" target="_blank" class="team">
+                    <img src="Images/valentin.png" alt="Valentin">
+                    <div class="meetLinkedin">
+                        <img src="Images/linkedin.png" alt="linkedin">
+                        <p>Valentin</p>
                     </div>
                 </a>
-                <a href="https://www.linkedin.com/in/yann-dubois-88665992/" target="_blank">
-                    <div class="team">
-                        <img src="Images/yann.png" alt="Yann">
-                        <div class="meetLinkedin">
-                            <img src="Images/linkedin.png" alt="linkedin">
-                            <p>Yann</p>
-                        </div>
+                <a href="https://www.linkedin.com/in/yann-dubois-88665992/" target="_blank" class="team">
+                    <img src="Images/yann.png" alt="Yann">
+                    <div class="meetLinkedin">
+                        <img src="Images/linkedin.png" alt="linkedin">
+                        <p>Yann</p>
                     </div>
                 </a>
                 </div>
