form button: added basic html structures, not viable yet

--- a/index.html
+++ b/index.html
@@ -149,7 +149,14 @@
                             <textarea id="message_textarea" placeholder="Your message" class="borderer"></textarea>
                         </div>
                     </div>
-                    <input class="borderer" id="send" type="submit" value="Send !">
+                    <input class="borderer" id="send" type="button" value="Send !">
+                    <div id="modal">
+                        <div>
+                            <h2>Congrats!</h2>
+                            <p>You did it, I'm open :). Now close me!</p>
+                            <button id="close-form-button" class="borderer">Alright !</button>
+                        </div>
+                      </div>
                 </form>
                 <p>We will answer you as quickly as we can !</p>
             </section>
