form button: added click JS on 'send', added CSS and improved HTML

--- a/index.html
+++ b/index.html
@@ -150,15 +150,13 @@
                         </div>
                     </div>
                     <input class="borderer" id="send" type="button" value="Send !">
-                    <div id="modal">
-                        <div>
-                            <h2>Congrats!</h2>
-                            <p>You did it, I'm open :). Now close me!</p>
+                    <div id="confirm-form-button">
+                        <div id="inner-button">
+                            <p>We will answer you as quickly as we can !</p>
                             <button id="close-form-button" class="borderer">Alright !</button>
                         </div>
-                      </div>
+                    </div>
                 </form>
-                <p>We will answer you as quickly as we can !</p>
             </section>
 
 
