--- a/index.html
+++ b/index.html
@@ -107,39 +107,41 @@
          <section id="some-projects">
             <h2>Some Projects</h2>
             <div class="carousel-container">
+                <ul class="carousel-slide">
+                    <li class="slide-item showing">
+                        <a href="https://codepen.io/Temporare/pen/vYYNyMM" target="_blank">
+                            <button type="button" id="seeMore">See More</button>
+                        </a>
+                    </li>
+                    <li class="slide-item">
+                        <a href="https://codepen.io/liolo/pen/orMxzG" target="_blank">
+                            <button type="button" id="seeMore">See More</button>
+                        </a>
+                    </li>
+                    <li class="slide-item">
+                        <a href="https://github.com/YannYves/Wild-Circus-template" target="_blank">
+                            <button type="button" id="seeMore">See More</button>
+                        </a>
+                    </li>
+                    <li class="slide-item">
+                        <a href="https://codepen.io/ValentinV3/pen/KKweBKJ" target="_blank">
+                            <button type="button" id="seeMore">See More</button>
+                        </a>
+                    </li>
+                    <li class="slide-item">
+                        <a href="https://codepen.io/magb7/pen/YzPbNEe" target="_blank">
+                            <button type="button" id="seeMore">See More</button>
+                        </a>
+                    </li>
+                    <li class="slide-item">
+                        <a href="https://codepen.io/Pikss/pen/WWEgez" target="_blank">
+                            <button type="button" id="seeMore">See More</button>
+                        </a>
+                    </li>
+                </ul>
                 <a id="prevBtn">&#10094;</a>
                 <a id="nextBtn">&#10095;</a>
-                <div class="carousel-slide">
-                    <img src="Images/WildCircus6.jpg" id="lastClone" alt="Picture of one of our project">
-                    <img src="Images/WildCircus1.jpg" alt="Picture of one of our project">
-                    <img src="Images/WildCircus2.jpg" alt="Picture of one of our project">
-                    <img src="Images/WildCircus3.jpg" alt="Picture of one of our project">
-                    <img src="Images/WildCircus4.jpg" alt="Picture of one of our project">
-                    <img src="Images/WildCircus5.jpg" alt="Picture of one of our project">
-                    <img src="Images/WildCircus6.jpg" alt="Picture of one of our project">
-                    <img src="Images/WildCircus1.jpg" id="firstClone" alt="Picture of one of our project">
-                </div>
-            </div>
-            
-            <article>
-                <a href="https://codepen.io/Temporare/pen/vYYNyMM" target="_blank"></a>
-            </article>
-            <article>
-                <a href="https://codepen.io/liolo/pen/orMxzG" target="_blank"></a>
-            </article>
-            <article>
-                <a href="https://github.com/YannYves/Wild-Circus-template" target="_blank"></a>
-            </article>
-            <article>
-                <a href="https://codepen.io/ValentinV3/pen/KKweBKJ" target="_blank"></a>
-            </article>
-            <article>
-                <a href="https://codepen.io/magb7/pen/YzPbNEe?editors=1100" target="_blank"></a>
-            </article>
-            <article>
-               <a href="https://codepen.io/Pikss/pen/WWEgez" target="_blank"></a>
-            </article>
-        
+            </div>        
         </section>
 
         <!--Form RoxaneDrelon--> 
