moddify they trust us with a js try

--- a/index.html
+++ b/index.html
@@ -158,50 +158,79 @@
 <!--THEY TRUST US-->
         <section id="they-trust-us">
             <h2>They trust us</h2>
-            <div class="container-testimonial">
-                <div class="testimonialBox">
-                    <svg class="testimonialBoxIcon" aria-hidden="true" width="64" height="64" viewBox="0 0 64 64">
-                        <polygon points="2 36 17 2 26 2 15 36 26 36 26 62 2 62 2 36"/>
-                        <polygon points="38 36 53 2 62 2 51 36 62 36 62 62 38 62 38 36"/>
-                    </svg>
-                    <blockquote class="testimonialBoxQuote">They have produced 
-                        <mark>a very efficient, professional and effective piece of work
-                        </mark>. I recommand them !
-                    </blockquote>
-                        <footer>
-                            <cite><strong>Dumbo</strong> <span>Designer at Wild Circus Company</span>
+            <div class="wrapper">
+                <div class="testi">
+                    <article class="client">
+                        <div class="say">
+                            <svg aria-hidden="true" width="64" height="64" viewBox="0 0 64 64">
+                                <polygon points="2 36 17 2 26 2 15 36 26 36 26 62 2 62 2 36"/>
+                                <polygon points="38 36 53 2 62 2 51 36 62 36 62 62 38 62 38 36"/>
+                            </svg>
+                            <blockquote>They have produced 
+                                <mark>a very efficient, professional and effective piece of work
+                                </mark>. I recommand them !
+                            </blockquote>
+                        </div>
+                        <footer class="profile">
+                            <div class="img">
+                                <img
+                                  src="images/dumbo.jpg"
+                                  alt="Dumbo pictures"
+                                />
+                              </div>
+                            <cite>DUMBO, Designer at Wild Circus Company
                             </cite>
                         </footer>
+                    </article>
                 </div>
 
-                <div class="testimonialBox">
-                    <svg class="testimonialBoxIcon" aria-hidden="true" width="64" height="64" viewBox="0 0 64 64">
-                    <polygon points="2 36 17 2 26 2 15 36 26 36 26 62 2 62 2 36"/>
-                    <polygon points="38 36 53 2 62 2 51 36 62 36 62 62 38 62 38 36"/>
-                    </svg>
-                    <blockquote class="testimonialBoxQuote">
-                        <mark>This team is amazing !
-                        </mark> Very helpful to behave better in sustainable development. 
-                    </blockquote>
-                    <footer>
-                        <cite><strong>Homer Simpson</strong> <span>Developer at Sprinfield Enterprise</span>
-                        </cite>
-                    </footer>
+              <div class="testi">
+                  <article class="client">
+                        <div class="say">
+                            <svg class="testimonialBoxIcon" aria-hidden="true" width="64" height="64" viewBox="0 0 64 64">
+                            <polygon points="2 36 17 2 26 2 15 36 26 36 26 62 2 62 2 36"/>
+                            <polygon points="38 36 53 2 62 2 51 36 62 36 62 62 38 62 38 36"/>
+                            </svg>
+                            <blockquote>
+                                 <mark>This team is amazing !
+                                </mark> Very helpful to behave better in sustainable development. 
+                            </blockquote>
+                        </div>
+                        <footer class="profile">
+                            <div class="img">
+                                <img
+                                  src="images/homer.png"
+                                  alt="Dumbo pictures"
+                                />
+                              </div>
+                            <cite>Homer Simpson, Developer at Sprinfield Enterprise
+                            </cite>
+                        </footer>
+                    </article>
                 </div>
               
-                <div class="testimonialBox">
-                    <svg class="testimonialBoxIcon" aria-hidden="true" width="64" height="64" viewBox="0 0 64 64">
-                        <polygon points="2 36 17 2 26 2 15 36 26 36 26 62 2 62 2 36"/>
-                        <polygon points="38 36 53 2 62 2 51 36 62 36 62 62 38 62 38 36"/>
-                    </svg>
-                    <blockquote class="testimonialBoxQuote">They are working 
-                        <mark>in a balanced, progressive and proactive way with a view
-
-                        </mark>, to solving the problems
-                    </blockquote>
-                    <footer>
-                        <cite><strong>Sauron</strong> <span>CEO at Mordor's Corporation</span></cite>
-                    </footer>
+               <div class="testi">
+                    <article class="client">
+                        <div class="say">
+                            <svg class="testimonialBoxIcon" aria-hidden="true" width="64" height="64" viewBox="0 0 64 64">
+                                <polygon points="2 36 17 2 26 2 15 36 26 36 26 62 2 62 2 36"/>
+                                <polygon points="38 36 53 2 62 2 51 36 62 36 62 62 38 62 38 36"/>
+                            </svg>
+                            <blockquote class="testimonialBoxQuote">They are working 
+                                <mark>in a balanced, progressive and proactive way with a view
+                                </mark>, to solving the problems
+                            </blockquote>
+                        </div>
+                        <footer class="profile">
+                            <div class="img">
+                                <img
+                                  src="images/sauron.jpg"
+                                  alt="Dumbo pictures"
+                                />
+                              </div>
+                            <cite>Sauron, CEO at Mordor's Corporation</cite>
+                        </footer>
+                </article>
                 </div>
             </section>
         <hr>
@@ -299,13 +328,13 @@
     </div>
 
 
-  <aside id="cookies">
+<aside id="cookies">
       <article>
         <h2>Ce site Web utilise des cookies<h2>
         <p>Les cookies nous permettent de personnaliser le contenu et les annonces, d'offrir des fonctionnalités relatives aux médias sociaux et d'analyser notre trafic. Nous partageons également des informations sur l'utilisation de notre site avec nos partenaires de médias sociaux, de publicité et d'analyse, qui peuvent combiner celles-ci avec d'autres informations que vous leur avez fournies ou qu'ils ont collectées lors de votre utilisation de leurs services </p>
     </article>
       <button type="button" id="btn">Accept cookies</button>
   </aside>
-<script type="text/javascript" src="script.js"></script>
+<!--<script type="text/javascript" src="script.js"></script>-->
 </body>
 </html>
