--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                                   alt="Dumbo pictures"
                                 />
                               </div>
-                            <cite>Homer Simpson, Developer at Sprinfield Enterprise
+                            <cite>HOMER SIMPSON, Developer at Sprinfield Enterprise
                             </cite>
                         </footer>
                     </article>
@@ -228,7 +228,7 @@
                                   alt="Dumbo pictures"
                                 />
                               </div>
-                            <cite>Sauron, CEO at Mordor's Corporation</cite>
+                            <cite>SAURON, CEO at Mordor's Corporation</cite>
                         </footer>
                 </article>
                 </div>
