--- a/index.html
+++ b/index.html
@@ -335,6 +335,6 @@
     </article>
       <button type="button" id="btn">Accept cookies</button>
   </aside>
-<!--<script type="text/javascript" src="script.js"></script>-->
+<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
