making the cookies baner sticky

--- a/index.html
+++ b/index.html
@@ -304,7 +304,8 @@
         <h2>Ce site Web utilise des cookies<h2>
         <p>Les cookies nous permettent de personnaliser le contenu et les annonces, d'offrir des fonctionnalités relatives aux médias sociaux et d'analyser notre trafic. Nous partageons également des informations sur l'utilisation de notre site avec nos partenaires de médias sociaux, de publicité et d'analyse, qui peuvent combiner celles-ci avec d'autres informations que vous leur avez fournies ou qu'ils ont collectées lors de votre utilisation de leurs services </p>
     </article>
-      <button type="button" id="btn">Accept cookies</button>
+      <button type="button" class="btn">Accept all cookies</button>
+      <button type="button" class="btn">Settings</button>
   </aside>
 <script type="text/javascript" src="script.js"></script>
 </body>
