--- a/index.html
+++ b/index.html
@@ -136,13 +136,16 @@
                             <label for="phone_form">Your phone:</label>
                             <input id="phone_form" class="mail_and_phone borderer" placeholder="03 12 34 56 78">
                             <label>Choose a topic:</label>
-                            <select class="borderer" id="category_form">
-                                <option value="quote">I need a quote:</option>
-                                <option value="questions">I have questions concerning your values:</option>
-                                <option value="questions">I have questions concerning your delays:</option>
-                                <option value="questions">I have questions concerning ... :</option>
-                                <option value="other">Other:</option>
-                            </select>
+                            <div class="custom-select">
+                                <select>
+                                    <option value="0">How can we help you ?</option>
+                                    <option value="1">I need a quote:</option>
+                                    <option value="2">I have questions concerning your values:</option>
+                                    <option value="3">I have questions concerning your delays:</option>
+                                    <option value="4">I have questions concerning ... :</option>
+                                    <option value="5">Other:</option>
+                                </select>
+                            </div>
                         </div>
                         <div id="second_half_form">
                             <label for="message_textarea">Your Message:</label>
