--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     </article>
                 </div>
 
-              <div class="testi">
+             <!-- <div class="testi">
                   <article class="client">
                         <div class="say">
                             <svg class="testimonialBoxIcon" aria-hidden="true" width="64" height="64" viewBox="0 0 64 64">
@@ -246,7 +246,7 @@
                               </div>
                             <cite>SAURON, CEO at Mordor's Corporation</cite>
                         </footer>
-                </article>
+                </article>-->
                 </div>
             </section>
         <hr>
