--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <ul class="ulheader">
                     <li class="liheader"><a href="#what-we-do">What we do</a></li>
                     <li class="liheader"><a href="#our-values">Our Values</a></li>
-                    <li class="liheader"><a href="#some-projects">Our Projects</a></li>
+                    <li class="liheader" class="liproject"><a href="#some-projects">Our Projects</a></li>
                     <li class="liheader"><a href="#formulaire">Contact us</a></li>
                     <li class="liheader"><a href="#they-trust-us">They trust us</a></li>
                     <li class="liheader"><a href="#meet-our-team">Meet our team</a></li>
