--- a/index.html
+++ b/index.html
@@ -169,12 +169,6 @@
                         </div>
                     </div>
                     <input class="borderer" id="send" type="button" value="Send !">
-                    <div id="confirm-form-button">
-                        <div id="inner-button">
-                            <p>We will answer you as quickly as we can !</p>
-                            <button id="close-form-button" class="borderer">Alright !</button>
-                        </div>
-                    </div>
                 </form>
             </section>
 
@@ -331,6 +325,14 @@
       <button type="button" class="btn">Accept all cookies</button>
       <button type="button" class="btn">Settings</button>
   </aside>
+
+  <div id="confirm-form-button">
+    <div id="inner-button">
+        <h3>We will answer you as quickly as we can !</h3>
+        <button id="close-form-button" class="borderer">Alright !</button>
+    </div>
+  </div>
+
 <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
