--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                         <footer class="profile">
                             <div class="img">
                                 <img
-                                  src="images/dumbo.jpg"
+                                  src="Images/dumbo.jpg"
                                   alt="Dumbo pictures"
                                 />
                               </div>
@@ -238,7 +238,7 @@
                         <footer class="profile">
                             <div class="img">
                                 <img
-                                  src="images/homer.png"
+                                  src="Images/homer.png"
                                   alt="Dumbo pictures"
                                 />
                               </div>
@@ -263,7 +263,7 @@
                         <footer class="profile">
                             <div class="img">
                                 <img
-                                  src="images/sauron.jpg"
+                                  src="Images/sauron.jpg"
                                   alt="Dumbo pictures"
                                 />
                               </div>
